[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/heroes/roll/sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://characters/heroes/megaman/sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/CharacterSelect/CharacterSelectScene.gd" type="Script" id=3]
[ext_resource path="res://scenes/CharacterSelect/CharacterSelect.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/CharacterSelect/GameStart.png" type="Texture" id=5]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/CharacterSelect/TrainingMode.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[node name="CharacterSelectScene" type="Node2D"]
position = Vector2( -1, 4 )
script = ExtResource( 3 )

[node name="StartGame" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 596, 577 )
normal = ExtResource( 5 )

[node name="TrainingMode" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 569, 491 )
normal = ExtResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 462.0
margin_top = 60.0
margin_right = 1083.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
text = "Choose your character!"

[node name="CharacterLogo" type="Sprite" parent="Label"]
position = Vector2( 299, 160 )
scale = Vector2( 0.75, 0.75 )

[node name="RollIcon" type="TouchScreenButton" parent="Label"]
position = Vector2( 59, 209 )
normal = ExtResource( 1 )

[node name="MegamanIcon" type="TouchScreenButton" parent="Label"]
position = Vector2( 350, 209 )
normal = ExtResource( 2 )
